# nepomuk-web-extractor

./: .gitignore  CMakeLists.txt  INSTALL  Messages.sh  QUESTIONS  README  ddms_core.cpp  ddms_core.h  ddms_service.cpp  ddms_service.h  nepomukddmservice.desktop  org.kde.nepomuk.DecisionManagementService.xml
client/: CMakeLists.txt  client.cpp  client.h  ddms_client_export.h  decision_model.cpp  decision_proxy.h  decision_proxy_data.cpp  decision_proxy_data.h  respond_proxies.cpp  respond_proxies.h
common/: CMakeLists.txt  decisionmanagementserviceadaptor.cpp  decisionmanagementserviceadaptor.h  decisionmanagementserviceproxy.cpp  decisionmanagementserviceproxy.h  protocol_types.cpp  protocol_types.h
graph/: CMakeLists.txt  LibWebextractorConfig.cmake.in  childqueryinterface.cpp  childqueryinterface.h  dotvisitor.cpp  dotvisitor.h  graphalgorithm.cpp  graphalgorithm.h  modelgraph.h  modelgraphvisitor.h  nodefilterinterface.cpp  nodefilterinterface.h  plaintextvisitor.h  resourcenodefilter.cpp  resourcenodefilter.h  selectedpropertiesfunc.cpp  selectedpropertiesfunc.h  sopranograph_export.h  visitednodefilter.h  vtkgraphvisitor.cpp  vtkgraphvisitor.h
gui/libwebextractorui/: CMakeLists.txt  LibWebextractoruiConfig.cmake.in  changeLogForm.ui  changelogwidget.cpp  changelogwidget.h  decisionForm.ui  decisioncollectionwidget.cpp  decisioncollectionwidget.h  decisionwidget.cpp  decisionwidget.h  decisionwidgetdesignerplugin.cpp  decisionwidgetdesignerplugin.h  webextractorui_export.h
lib/: CMakeLists.txt  Doxyfile.in
lib/bindings/: CMakeLists.txt
lib/decision/: CMakeLists.txt  LibNepomukDecisionConfig.cmake.in  applyerror.h  changelogfiltermodel.h  decision.cpp  decision.h  decision_export.h  decisionapplicationrequest.cpp  decisionapplicationrequest.h  decisionapplicationrequest_p.h  decisionauthor.h  decisioncreator.cpp  decisioncreator.h  decisioncreator_p.cpp  decisioncreator_p.h  decisiondata.cpp  decisiondata.h  decisionfactory.cpp  decisionfactory.h  decisionlist.cpp  decisionlist.h  decisionmetadata.cpp  decisionmetadata.h  global.cpp  global.h  identsetmanager.cpp  identsetmanager.h  propertiesgroup.cpp  propertiesgroup.h  propertiesgroupcreator.cpp  propertiesgroupcreator.h  propertiesgroupcreator_p.cpp  propertiesgroupcreator_p.h
lib/graph/: CMakeLists.txt  LibNepomukgraphConfig.cmake.in  algorithm.h  childqueryinterface.h  copyvisitor.h  dotvisitor.h  graph_export.h  modelgraphvisitor.h  nodefilterinterface.cpp  selectedpropertiesfunc.cpp  selectedpropertiesfunc.h
lib/ui/: CMakeLists.txt
lib/webextractor/: CMakeLists.txt  LibWebextractorConfig.cmake.in  config.h.in  debugexecutive.cpp  debugexecutive.h  executive.cpp  executive.h  executivereply.cpp  executivereply.h  executivereply_p.h  executivewrapper.cpp  executivewrapper.h  global.cpp  global.h  parameters.cpp  parameters.h  resourceanalyzer.cpp  resourceanalyzer.h  resourceanalyzerfactory.cpp  resourceanalyzerfactory.h  simpleexecutivereply.cpp  simpleexecutivereply.h  simpleexecutivereply_p.h  simplenetworkexecutive.cpp  simplenetworkexecutive.h  simplenetworkreply.h
libbackupsynclegacy/: CMakeLists.txt  changelog.cpp  changelog.h  changelogrecord.cpp  changelogrecord.h  graphwrapper.cpp  graphwrapper_p.h  identification.trig  identificationrequest.cpp  identificationrequest.h  identificationrequest_p.cpp  identificationrequest_p.h  identificationset.cpp  identificationset.h  mergerequest.cpp  mergerequest.h  misc.cpp  misc.h  simpleresource.cpp  simpleresource.h  syncfile.cpp  syncfile.h
libwebextractor/: CMakeLists.txt  LibWebextractorConfig.cmake.in  algorithm.cpp  algorithm.h  changelog.h  changelogfiltermodel.h  childqueryinterface.h  config.h.in  copyvisitor.cpp  copyvisitor.h  datapp.cpp  datapp.h  datappkeeper.h  datappproxy.cpp  datappproxy.h  datappreply.cpp  datappreply.h  datappreply_p.h  datapprequest.h  datapptemplate.h  datappwrapper.cpp  datappwrapper.h  debug_datapp.cpp  debug_datapp.h  debugexecutive.cpp  debugexecutive.h  decision.cpp  decision.h  decisionapplicationrequest.cpp  decisionapplicationrequest.h  decisionapplicationrequest_p.h  decisioncreator.cpp  decisioncreator.h  decisioncreator_p.cpp  decisioncreator_p.h  decisiondata.cpp  decisiondata.h  decisionfactory.cpp  decisionfactory.h  decisionfactorybase.cpp  (+77 more)
libwebextractor/decisions/: CMakeLists.txt  applyerror.h  decision.h  decisionapplicationrequest.cpp  decisionapplicationrequest.h  decisionapplicationrequest_p.h  decisioncreator.cpp  decisioncreator.h  decisioncreator_p.cpp  decisioncreator_p.h  decisiondata.cpp  decisiondata.h  decisionfactory.cpp  decisionfactory.h  decisionlist.cpp  decisionlist.h  propertiesgroup.cpp  propertiesgroup.h  propertiesgroupcreator.cpp  propertiesgroupcreator_p.h
libwebextractor/graph/: CMakeLists.txt  LibNepomukgraphConfig.cmake.in  childqueryinterface.cpp  graphalgorithm.h  modelgraph.h  nepomukgraph_export.h  nodefilterinterface.h  plaintextvisitor.h  resourcenodefilter.h  visitednodefilter.h
libwebextractor/lib/: CMakeLists.txt  datapp.cpp  datappproxy.cpp  datappreply.cpp  datappwrapper.cpp  datappwrapper.h  debug_datapp.cpp  decision.cpp  decisionfactory.cpp  decisionlist.cpp  (+18 more)
runtime/: CMakeLists.txt
service/: CMakeLists.txt  datappconfig.kcfg  datappconfig.kcfgc  ddms_core.cpp  ddms_core.h  ddms_service.cpp  ddms_service.h  nepomukddmservice.desktop  nepomukwebexservice.desktop  plugin_interface.h  settings_config.h.in  test_config.cpp  test_launch2.cpp  test_simple.cpp  webexcatconfig.cpp  webexcatconfig.h  webexcategory.kcfg  webexcategory.kcfgc  webexcatscheduler.cpp  webexcatscheduler.h  webexcatschedulerimpl.cpp  webexcatschedulerimpl.h  webexconfigbase.kcfgc  webexcore.h  webexqueries.cpp  webexqueries.h  webexscheduler.cpp  webexscheduler.h  webexschedulerimpl.cpp  webexschedulerimpl.h  webexservice.cpp  webexservice.h  webextractor.kcfg  webextractor_config.cpp  webextractor_config.h  webextractor_plugin.desktop  webextractor_plugin.h  webextractor_settings.cpp  webextractor_settings.h  webextractordatapp.desktop
tests/: CMakeLists.txt  test_launch.cpp
(+561 files in other folders)
